--- a/css/style.css
+++ b/css/style.css
@@ -414,7 +414,7 @@ html{
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
     /* filter: blur(0px) brightness(0.9) */
     /* backdrop-filter: blur(10px); */
   }
